Update the slides with international experiences

--- a/latex/slides-extended.tex
+++ b/latex/slides-extended.tex
@@ -1,4 +1,4 @@
-% Time-stamp: <2021-06-01 19:00:23 RLafarguette>
+% Time-stamp: <2021-06-02 16:56:08 rlafarguette>
 % Beamer template for the Macro Stress-Testing Article
 % June 2021
 % Contact: Romain Lafarguette, rlafarguette@imf.org
@@ -77,13 +77,13 @@
 %% Title info
 %% ---------------------------------------------------------------------------
 \title[]{FX Interventions Rules for Central Banks\\
-A Risk-Based Framework}
+International Experiences and a Novel Risk-Based Framework}
 \author[]{Romain Lafarguette \and Romain Veyrune}
 \institute[]{IMF Monetary and Capital Markets Department \\ Central Bank Operations Division}
 
 \date[]{\scriptsize \today \\ \vspace{0.5cm} \scriptsize{\textit{The views
       expressed in this presentation do not necessarily represent the views of
-      the IMF, its Executive Board, or IMF management} \vspace{-0.5cm}}}
+      the IMF, its Executive Board, or IMF management} \vspace{-0.75cm}}}
 
 \titlegraphic{
     \begin{figure}
@@ -118,15 +118,15 @@ A Risk-Based Framework}
 %% ---------------------------------------------------------------------------
 %% International Experiences
 %% ---------------------------------------------------------------------------
-\section{International Experiences}
+\section{International Experiences of FX Intervention Rules}
 \begin{frame}
-  \frametitle{Goals and Intermediate Objectives}
+  \frametitle{Goals and Intermediate Objectives of FX Interventions}
 
   \textbf{Goals}
   \begin{itemize}
   \item Price stability: disanchored inflation expectations due to
     exchange-rate pass-through
-  \item Financial stability: preserving market functionning, curbing excessive speculation
+  \item Financial stability: preserving market functionning, curbing excessive volatility
   \end{itemize}
 
 \bigskip
@@ -143,42 +143,156 @@ A Risk-Based Framework}
 
 \begin{frame}
   \frametitle{BIS Survey: Goals}
-    \makebox[\linewidth]{\includegraphics[width=\paperwidth]{bis_survey_goals.PNG}}
+    \makebox[\linewidth]{\includegraphics[width=0.9\paperwidth]{bis_survey_goals.PNG}}
 \end{frame}
-
 
 
 \begin{frame}
   \frametitle{BIS Survey: Intermediate Objectives}
-    \makebox[\linewidth]{\includegraphics[width=\paperwidth]{bis_survey_intermediate_objectives.PNG}}
+    \makebox[\linewidth]{\includegraphics[width=0.9\paperwidth]{bis_survey_intermediate_objectives.PNG}}
 \end{frame}
 
+
 \begin{frame}
-  \frametitle{Bank of Mexico FX Interventions Setup}
+  \frametitle{FX Interventions Rules}
 
-
+  \begin{itemize}
+  \item An intervention is deemed rule-based
+    \textbf{when it reacts to predetermined parameters to deliver predictable responses}
+  \end{itemize}
   
+Intervention rules have many advantages:
+\begin{itemize}
+\item Consistent approach with the policy objectives
+\item Robust operational framework
+\item If public: anchors agents' expectations and influence their behavior to
+  reach the policy objectives 
+\item Supports market functionning and market development
+\item Strengthens the central bank credibility and independence
+\end{itemize}
+
+The large majority of FX interventions rules implemented by central banks are
+based on \textbf{fixed-volatility thresholds}: cf. Mexico, Columbia and Guatemala
 \end{frame}
 
 
 \begin{frame}
-  \frametitle{Bank of Mexico FX Interventions Setup}  
-  \begin{largeitemize}
-    \item The Banco Mexico (BM) implemented both ex-ante, transparent FX
-      auctions and discretionary-rate auctions
-    \item Different reservation rates:
-      \begin{largeitemize}
-      \item \textbf{Rule-based setting}: BM operated an auction every day
-        with a pre-announced \textbf{a minimum rate} for eligible bids
-      \item \textbf{Discretionary setting}: the auction was organized at the BM's discretion without reservation rate
-      \end{largeitemize}
-  \item Often, no demand for the ruled-based auction as the market rate was
-    below the reservation rate
-  \item No-minimum price auctions could be motivated by other considerations
-    than the exchange rate level
-  \item What was the risk level when the FXI occurred?
-  \end{largeitemize}
+  \frametitle{Bank of Mexico FX Operations}
+  The BM put in place two types of FX operations:\\
+  \medskip
+  
+  \begin{wideenumerate}
+  \item To accumulate or sell foreign reserves
+    \begin{itemize}
+    \item Via pre-determined put options for purchases
+     \item And auctions for selling foreign reserves
+    \end{itemize}
+  \item To intervene on the market to limit extreme exchange rate volatility
+    and provide liquidity to ensure proper market operating conditions
+    \begin{itemize}
+    \item Using minimum-prices auctions (rule-based)
+    \item No-minimum prices auctions (discretionary prices)
+    \end{itemize}
+  \end{wideenumerate}
+
+    \medskip
+  We focus on the second type of operations, the FX interventions   
 \end{frame}
+
+
+\begin{frame}
+  \frametitle{Minimum Bid Price Mechanism}
+  \begin{largeitemize}
+  \item The central bank auctions a \textbf{prespecified amount of US dollars} every
+    day and sets a minimum accepted price
+  \item The trigger to sell US dollars to the market is
+    predetermined by market conditions without meddling with the free-floating
+    exchange rate regime
+    \begin{itemize}
+    \item The minimum price accepted was set equal to the \textbf{previous day closed value plus a 2 percent
+      depreciation factor} (was changed to 1.5 and then 1 after 2014 and 2015)
+    \end{itemize}
+  \end{largeitemize}  
+\end{frame}
+
+\begin{frame}
+  \frametitle{No Minimum Bid Price Mechanism}
+  \begin{largeitemize}
+  \item Sometimes, a constant demand for US dollars that could distort operating conditions
+    and generate volatility is expected to persist
+  \item The total amount offered corresponded to the \textbf{expected} accumulation of international
+reserves during the following quarter (most of the accumulation came from the
+national oil company sales to the CB)
+\begin{itemize}
+\item Sometimes, the amount was directly decided by the central bank, on a
+  discretionary basis
+\end{itemize}
+  \end{largeitemize}  
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Columbia: Volatility Options}
+  \begin{largeitemize}
+  \item The central bank publicly committed to offer, through auctions, call (put)
+    options with one-month maturity 
+  \item Whenever the representative bilateral rate (TRM) was higher/lower than its 20-day moving average +/-5 percent (then changed to 2 percent in 2011 then 7 percent later)
+    \item  The strike price was the TRM, and the condition for being able to exercise
+      the option was the same as for the activation of the auction.
+    \item Objective to mitigate extreme fluctuations: amount
+      auctionned large compared to market turnover
+    \item However, the central bank struggled to find the right threshold
+      (5-7-2 percent), and had a lot of try and miss
+  \end{largeitemize}
+  \end{frame}
+
+
+\begin{frame}
+  \frametitle{Columbia FX Operations}
+    \makebox[\linewidth]{\includegraphics[height=0.85\paperheight]{columbia_interventions.PNG}}
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Guatemala: Auctions With Maximum Allotment}
+  \begin{largeitemize}
+  \item Intervention if the reference exchange rate reaches or exceeds the
+    fluctuation band of +/- 0.80\% around the moving average of the reference
+    exchange rates from the past five business days
+  \item Auction to buy or sell up to US\$10 million in foreign currency
+  \item No more than five auctions a day are allowed
+  \item The results of public auctions are disclosed to the public by publication on the website of the BOG and through print mass media.    
+  \end{largeitemize}  
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Fixed-Volatility Rules in Perspective}
+
+  \small
+  Fixed-volatility rules are simple, transparent and consistent with
+  inflation targeting. However:
+  
+  \begin{itemize}
+  \item The fixed thresholds are difficult to decide and have to be revised
+    often (cf Columbia and Mexico)     
+  \item Rigid to market conditions: might prove inadequate in extreme stress
+    periods 
+  \item Prone to market manipulation, and don't properly align the
+    incentives of market participants with CB objectives 
+  \item Fixed triggers lead to asymmetric interventions, and can put the FX
+    reserves at risk
+  \item Often, tend to over-hedge FX risk for market participants,
+    leading to moral hazard and constraining FX market development
+  \item Interventions are not financially optimal from a cost perspective
+  \end{itemize}
+
+We have developed a new framework to address these shortcomings
+
+\normalsize
+
+\end{frame}
+
 
 
 
@@ -264,7 +378,7 @@ We propose an FX intervention rule based on \textbf{Conditional Value-at-Risk}
     and costly (exhaust FX reserves)
   \item No free insurance to the market: avoid \textbf{moral
       hazard}, foster the \textbf{development of hedging market}
-  \item Prevent \textbf{market speculation and windfall effects}
+  \item Prevent \textbf{market manipulation and windfall effects}
   \item Guarantees \textbf{fixed-frequency} interventions: 
     \begin{itemize}
     \item \textbf{Certainty} about interventions: the central bank can intervene with
