--- a/output/regressions_table_short.tex
+++ b/output/regressions_table_short.tex
@@ -2,13 +2,13 @@
 \toprule
 {} & Microstructure &       CIP & Dollar move & Risk Appetite &  Baseline \\
 \midrule
-Intercept                       &       -2.33*** &     -2.23 &       -1.84 &         -2.55 &     -1.63 \\
-Lag FX log returns              &       -0.07*** &  -0.08*** &    -0.08*** &      -0.08*** &  -0.08*** \\
-Bid ask abs                     &        5.73*** &     24.55 &      -35.84 &         -2.48 &      3.43 \\
-Min max abs                     &       35.55*** &     34.27 &    34.36*** &        34.44* &    26.16* \\
-Forward points first difference &       23.29*** &  17.85*** &    26.44*** &      19.82*** &  19.44*** \\
-Interbank rate vs Libor         &                &   33.7*** &    39.31*** &      34.76*** &  33.87*** \\
-EURUSD log returns              &                &           &    -0.14*** &      -0.17*** &  -0.16*** \\
+Intercept                       &       -2.33*** &     -2.23 &       -1.84 &         -2.56 &    -1.63* \\
+Lag FX log returns              &       -0.07*** &  -0.08*** &     -0.08** &      -0.08*** &  -0.08*** \\
+Bid ask abs                     &        5.72*** &     24.54 &      -35.78 &         -2.66 &      3.18 \\
+Min max abs                     &       35.56*** &     34.26 &    34.33*** &        34.59* &    26.19* \\
+Forward points first difference &       23.28*** &  17.84*** &    26.44*** &       19.8*** &  19.44*** \\
+Interbank rate vs Libor         &                &   33.7*** &    39.32*** &      34.75*** &  33.86*** \\
+EURUSD log returns              &                &           &     -0.14** &      -0.17*** &  -0.16*** \\
 VIX first diff                  &                &           &             &      15.66*** &  15.37*** \\
 FX intervention dummy lag       &                &           &             &               &      2.23 \\
 Oil prices log returns          &                &           &             &               &  -0.02*** \\
@@ -17,7 +17,7 @@ Alpha                           &        0.17*** &   0.17*** &     0.16*** &    
 Gamma                           &        0.07*** &   0.06*** &     0.06*** &       0.05*** &   0.05*** \\
 Beta                            &        0.98*** &   0.99*** &     0.99*** &       0.99*** &   0.99*** \\
 Nu                              &        8.33*** &   8.67*** &     8.92*** &       8.71*** &   8.54*** \\
-Lambda                          &        0.08*** &      0.08 &     0.09*** &         0.07* &   0.08*** \\
+Lambda                          &        0.08*** &      0.08 &      0.09** &         0.07* &   0.08*** \\
 R2                              &          5.8 \% &     6.7 \% &      10.4 \% &        27.3 \% &    27.6 \% \\
 R2 adjusted                     &          5.8 \% &     6.6 \% &      10.4 \% &        27.2 \% &    27.5 \% \\
 Number of observations          &           5986 &      5986 &        5682 &          5682 &      5680 \\
