--- a/researchpaper/output/regressions_table.tex
+++ b/researchpaper/output/regressions_table.tex
@@ -2,22 +2,21 @@
 \toprule
 {} & Microstructure &            CIP &    Dollar move &  Risk Appetite &       Baseline \\
 \midrule
-Intercept                       &  -2.33***(0.0) &    -2.23(0.39) &    -1.84(0.33) &    -2.56(0.13) &   -1.63*(0.09) \\
+Intercept                       &    -2.34(0.25) &    -2.28(0.38) &    -1.84(0.35) &    -2.55(0.14) &  -1.63***(0.0) \\
 Lag FX log returns              &  -0.07***(0.0) &  -0.08***(0.0) &  -0.08**(0.03) &  -0.08***(0.0) &  -0.08***(0.0) \\
-Bid ask abs                     &   5.72***(0.0) &    24.54(0.64) &   -35.78(0.84) &    -2.66(0.96) &     3.18(0.96) \\
-Min max abs                     &  35.56***(0.0) &    34.26(0.31) &  34.33***(0.0) &   34.59*(0.08) &   26.19*(0.08) \\
-Forward points first difference &  23.28***(0.0) &  17.84***(0.0) &  26.44***(0.0) &   19.8***(0.0) &  19.44***(0.0) \\
-Interbank rate vs Libor         &                &   33.7***(0.0) &  39.32***(0.0) &  34.75***(0.0) &  33.86***(0.0) \\
+Bid ask abs                     &     5.73(0.36) &     24.4(0.64) &   -35.81(0.84) &    -2.69(0.96) &     3.46(0.67) \\
+Min max abs                     &  35.6***(0.01) &     34.63(0.3) &  34.35***(0.0) &   34.45*(0.09) &  26.16***(0.0) \\
+Forward points first difference &  23.29***(0.0) &  17.79***(0.0) &  26.44***(0.0) &  19.82***(0.0) &  19.44***(0.0) \\
+Interbank rate vs Libor         &                &  33.61***(0.0) &  39.31***(0.0) &  34.75***(0.0) &  33.87***(0.0) \\
 EURUSD log returns              &                &                &  -0.14**(0.01) &  -0.17***(0.0) &  -0.16***(0.0) \\
-VIX first diff                  &                &                &                &  15.66***(0.0) &  15.37***(0.0) \\
-FX intervention dummy lag       &                &                &                &                &     2.23(0.62) \\
+VIX first diff                  &                &                &                &  15.67***(0.0) &  15.37***(0.0) \\
+FX intervention dummy lag       &                &                &                &                &     2.23(0.61) \\
 Oil prices log returns          &                &                &                &                &  -0.02***(0.0) \\
 Omega                           &   0.13***(0.0) &   0.13***(0.0) &   0.12***(0.0) &   0.11***(0.0) &   0.12***(0.0) \\
 Alpha                           &   0.17***(0.0) &   0.17***(0.0) &   0.16***(0.0) &   0.16***(0.0) &   0.15***(0.0) \\
 Gamma                           &   0.07***(0.0) &   0.06***(0.0) &   0.06***(0.0) &   0.05***(0.0) &   0.05***(0.0) \\
 Beta                            &   0.98***(0.0) &   0.99***(0.0) &   0.99***(0.0) &   0.99***(0.0) &   0.99***(0.0) \\
-Nu                              &   8.33***(0.0) &   8.67***(0.0) &   8.92***(0.0) &   8.71***(0.0) &   8.54***(0.0) \\
-Lambda                          &   0.08***(0.0) &     0.08(0.11) &   0.09**(0.01) &    0.07*(0.05) &   0.08***(0.0) \\
+Lambda                          &   0.08***(0.0) &     0.07(0.11) &   0.09**(0.01) &    0.07*(0.05) &   0.08***(0.0) \\
 R2                              &          5.8 \% &          6.7 \% &         10.4 \% &         27.3 \% &         27.6 \% \\
 R2 adjusted                     &          5.8 \% &          6.6 \% &         10.4 \% &         27.2 \% &         27.5 \% \\
 Number of observations          &           5986 &           5986 &           5682 &           5682 &           5680 \\
